Use OpenJDK 12's flag to enable container improvements